flex/flex-tests/testData/js2_highlighting/FinalModifiers2.js2
package  {
public <error descr="Final modifier can be applied only to classes and class methods">final</error> function FinalModifiers2() {
}
}
